# sc-2-Striped-Conciliation

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/eval/: census_autoencoder_multids_eval.yaml
configs/paths/: hpc.yaml  local.yaml
preprocess/: build_census_manifest.py  export_census_pilot.py  inspect_archs4_h5.py  make_census_split.py  make_census_splits.py
preprocess/bulk/: build_archs4_gene_table.py  filter_archs4_lung_samples.py  prepare_archs4_subset.py
preprocess/census/: build_census_gene_table.py  build_h5ad_manifest.py  export_census_large_lung_pilot.py  export_census_multi_dataset_pilot.py
preprocess/common/: build_shared_gene_intersection.py
preprocess/gtex/: build_gtex_lung_h5ad.py
scripts/: download_gtex_v11_lung.sh  download_gtex_v8_lung.sh
scripts/hpc/: download_gtex_v11_lung.sh
slurm/: train_census_autoencoder.slurm  train_census_autoencoder_debug.slurm
slurm/bulk/: download_archs4.slurm  eval_archs4_lung_denoising_autoencoder.slurm  eval_archs4_lung_large_denoising_autoencoder.slurm  train_archs4_lung_denoising_autoencoder.slurm  train_archs4_lung_large_denoising_autoencoder.slurm
slurm/census/: eval_sc2lite_sc_only_large.slurm  train_census_autoencoder_multids.slurm  train_sc2lite_sc_only_large.slurm
slurm/mixed/: eval_gene.slurm  eval_m2.slurm  eval_mixed_bulk_sc_autoencoder_lung_sc5_big.slurm  eval_orig.slurm  eval_sc2_mamba_bridge_lung_large.slurm  eval_sc2_mamba_generic.slurm  eval_sc2lite_bridge_v2_lung_large.slurm  eval_sc2lite_lung_large.slurm  train_gene.slurm  train_m2.slurm  (+8 more)
(+110 files in other folders)
